Fix(RankingPage): Fix Layout Issues and other
- Move to wrong level when highest level clicked
- Fix Layout

--- a/src/stylesheets/ranking.css
+++ b/src/stylesheets/ranking.css
@@ -107,7 +107,7 @@
 }
 
 .ranking-item-detail-highest-title {
-  max-width: 290px;
+  max-width: 280px;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
